--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
 EMAIL_HOST=smtp-relay.brevo.com
-EMAIL_HOST_USER=9080ac001@smtp-brevo.com
-EMAIL_HOST_PASSWORD='mDznh1j5R2wqpXQE'
-SECRET_KEY=asecretkey
+EMAIL_HOST_USER=your_email_here@smtp-brevo.com
+EMAIL_HOST_PASSWORD=your_password_here
+SECRET_KEY=your_django_secret_key_here
