--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,39 @@
-Django==5.1.4
+amqp==5.3.1
+asgiref==3.8.1
+billiard==4.2.1
 celery==5.4.0
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+colorama==0.4.6
+Django==5.1.4
 django-redis==5.4.0
+dnspython==2.7.0
+eventlet==0.40.1
 factory_boy==3.3.1
 Faker==33.3.1
 flower==2.0.1
+greenlet==3.2.3
+humanize==4.12.3
+inflection==0.5.1
+iniconfig==2.1.0
+kombu==5.5.4
+packaging==25.0
+pluggy==1.6.0
+prometheus_client==0.22.1
+prompt_toolkit==3.0.51
 pytest==8.3.4
 pytest-django==4.9.0
 pytest-factoryboy==2.7.0
+python-dateutil==2.9.0.post0
 python-decouple==3.8
+pytz==2025.2
+redis==6.2.0
+six==1.17.0
+sqlparse==0.5.3
+tornado==6.5.1
+typing_extensions==4.14.0
+tzdata==2025.2
+vine==5.1.0
+wcwidth==0.2.13
